--- a/index.html
+++ b/index.html
@@ -9,5 +9,14 @@
   <script defer src="index.js"></script> 
 </head> 
 <body> 
+  <h1 class="title">RSS Виртуальная клавиатура</h1>
+  <textarea name="textarea" class="textarea" id="textarea" cols="80" rows="8"></textarea>
+  <div class="keyboard">
+    <div class="row">
+      <div class="button">1</div>
+    </div>
+  </div>
+  <p class="info">Клавиатура создана в операционной системе Windows</p>
+  <p class="language">Для переключения языка комбинация: левые ctrl + alt</p>
 </body> 
 </html>
