feat: activate virtual letters from keyboard

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <title>Virtual keyboard</title> 
   <link rel="stylesheet" href="style.css"> 
 </head> 
-<body> 
-  <script defer src="index.js"></script> 
-</body> 
+<body>
+  <script src="index.js"></script>
+</body>
 </html>
